--- a/style.css
+++ b/style.css
@@ -33,8 +33,6 @@ body {
 .currentTime {
   width: 12em;
 
-  border: 1px solid black;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,4 +48,21 @@ span {
   font-family: sans-serif;
   font-style: italic;
   font-weight: bold;
+}
+
+@media only screen and (max-width: 480px) {
+  /* CSS rules to apply */
+  .currentTime {
+    width: 100%;
+
+    box-sizing: border-box;
+
+    text-align: center;
+  }
+
+  span {
+    /* box-sizing: border-box; */
+  
+    font-size: 9em;
+  }
 }
